[tool.poetry]
name = "class_noise_simulation"
version = "0.1.0"
description = ""
authors = ["Justin Johnson <johnsonj561@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
